@@ -7,6 +7,6 @@ AUX gprolog-1.3.1-TXT_FILES.patch 578 RMD160 08ae92458cae6e6b1044a46ce6bebc0e273
 DIST gprolog-1.3.0.tar.gz 3016665 RMD160 56a7e6f0dab343d162620bccb177e67bca639797 SHA1 1ad7b7764c8e8d92f4f18619f29155001fe7d78f SHA256 1aca625e06d4cf05f9d6049e33f7a87afff98995670faf8bc3dfd1768244d3a7
 DIST gprolog-1.3.1.tar.gz 2949369 RMD160 f942f82e4034a59fd0bc5276542872375d7dc801 SHA1 d2912847725a0d917c6937c9402bcc21072b1a73 SHA256 3c33159b9d234647a06e78870c14a0518d6a2a5f85db906360777feb3d98c316
 EBUILD gprolog-1.3.0-r2.ebuild 1584 RMD160 dcf6cb76768de8620d27840af71bd52b1db1f8a8 SHA1 0e3f647146351ac7021c95a43a605bfcd7eabf6c SHA256 d880f3cd564a26f2eab5bdc6f8781b380dd0637551abf15f256edf5cddf11483
-EBUILD gprolog-1.3.1.ebuild 1511 RMD160 711d701f911cdafae725db2ca611247e5389a152 SHA1 4ce873c5d23ea0c2b5301369e8c9e1b6fa49349f SHA256 d34921e4659c11d7b236a1d470001e9df1063346458fc8ab7a8889f8705fdcdf
-MISC ChangeLog 5669 RMD160 0ecffd759e75e9f614a4003e6f586c794ce727f5 SHA1 e4c274ffed0c0eb575408195abb06c227f345ca5 SHA256 13c983b03e5e463900206f371b8ee46f48ae75c2a39b8af5630985d00af9e395
+EBUILD gprolog-1.3.1.ebuild 1500 RMD160 2bb4406cecb6af2e3943d7a2c1e4e82ad2da8957 SHA1 2d809a3db374da7c846df22ed983de9404186975 SHA256 99f8749f2a3637620f9053978a7da6e475f8844529599d17a54e70463ae5a797
+MISC ChangeLog 5755 RMD160 bf73263e4a37460dce494add441dfd1d294f1bda SHA1 853d4d306a24622e0e4b8dc59235e492999b0725 SHA256 99c0478b1cfd8de53e57ab07f5d43d8feab84a1902b2349865cbf861757cc09d
 MISC metadata.xml 159 RMD160 38d27fd1c5faabedefa5507dfd83cb4c952fbc8c SHA1 52b92682cf41e53e71bf432537a16215bd9546b1 SHA256 851bf218a4283a1d8ea6ef98af0119a40eaa78bfaaec49c2f3440437f52889ba
